--- a/css/cong-and-margi.css
+++ b/css/cong-and-margi.css
@@ -31,7 +31,7 @@
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 .cong-and-margi h1, .cong-and-margi h2, .cong-and-margi h3, .cong-and-margi h4, .cong-and-margi h5 {
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   text-align: center;
 }
 .cong-and-margi #mainNav {
