--- a/css/cong-and-margi.scss
+++ b/css/cong-and-margi.scss
@@ -39,7 +39,7 @@ $light-green: #97d8c8;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
   h1, h2, h3, h4, h5 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     text-align: center;
   }
   #mainNav {
