Updating css and gitignore

--- a/css/cong-and-margi.scss
+++ b/css/cong-and-margi.scss
@@ -8,8 +8,8 @@
 $lightest-pink: #a0c0ef;
 $light-pink: #a0c0ef;
 $dark-pink: #77a3e5;
-$light-green: #97d8c8;
-
+$light-green: #39ac73;
+ 
 .bg-pink {
   background-color: $light-green;
 }
