--- a/css/cong-and-margi.css
+++ b/css/cong-and-margi.css
@@ -4,7 +4,7 @@
   src: url("autumn-in-november.ttf") format("truetype");
 }
 .bg-pink {
-  background-color: #97d8c8;
+  background-color: #39ac73;
 }
 
 .bg-pink-flower {
@@ -20,7 +20,7 @@
 }
 
 .bg-green {
-  background-color: #97d8c8;
+  background-color: #39ac73;
 }
 
 .text-align-center {
@@ -64,7 +64,7 @@
 .cong-and-margi .header .header-subtext h3 {
   padding: 10px;
   border-radius: 5px;
-  background-color: #97d8c8;
+  background-color: #39ac73;
   font-size: 30px;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: white;
@@ -204,3 +204,5 @@
     height: 100%;
   }
 }
+
+/*# sourceMappingURL=cong-and-margi.css.map */
