Tweaking color and adding to gifts question

--- a/css/cong-and-margi.scss
+++ b/css/cong-and-margi.scss
@@ -8,7 +8,7 @@
 $lightest-pink: #a0c0ef;
 $light-pink: #a0c0ef;
 $dark-pink: #77a3e5;
-$light-green: #39ac73;
+$light-green: #339980;
  
 .bg-pink {
   background-color: $light-green;
