--- a/css/cong-and-margi.scss
+++ b/css/cong-and-margi.scss
@@ -5,10 +5,10 @@
   src: url('autumn-in-november.ttf')  format('truetype'), /* Safari, Android, iOS */
 }
 
-$lightest-pink: #a0c0ef;
-$light-pink: #a0c0ef;
+$lightest-pink: #70D6FF;
+$light-pink: #70D6FF;
 $dark-pink: #77a3e5;
-$light-green: #339980;
+$light-green: #306BAC;
  
 .bg-pink {
   background-color: $light-green;
