--- a/css/cong-and-margi.scss
+++ b/css/cong-and-margi.scss
@@ -8,7 +8,7 @@
 $lightest-pink: #70D6FF;
 $light-pink: #70D6FF;
 $dark-pink: #77a3e5;
-$light-green: #306BAC;
+$light-green: #000000;
  
 .bg-pink {
   background-color: $light-green;
