--- a/css/cong-and-margi.scss
+++ b/css/cong-and-margi.scss
@@ -5,10 +5,10 @@
   src: url('autumn-in-november.ttf')  format('truetype'), /* Safari, Android, iOS */
 }
 
-$lightest-pink: #70D6FF;
-$light-pink: #70D6FF;
+$lightest-pink: #306BAC;
+$light-pink: #306BAC;
 $dark-pink: #77a3e5;
-$light-green: #FFFFFF;
+$light-green: #E5F2FC;
  
 .bg-pink {
   background-color: $light-green;
