Updating header text color

--- a/css/cong-and-margi.css
+++ b/css/cong-and-margi.css
@@ -50,7 +50,7 @@
   width: 100vw;
   text-align: center;
   top: 86px;
-  color: #fff;
+  color: #306BAC;
 }
 .cong-and-margi .header .header-text h1 {
   font-size: 72px;
@@ -67,7 +67,7 @@
   background-color: #E5F2FC;
   font-size: 30px;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: white;
+  color: #306BAC;
   width: fit-content;
   margin: 0 auto;
   font-variant: small-caps;
