--- a/css/cong-and-margi.scss
+++ b/css/cong-and-margi.scss
@@ -61,7 +61,7 @@ $light-green: #E5F2FC;
       width: 100vw;
       text-align: center;
       top: 86px;
-      color: #fff;
+      color: $light-pink;
       h1 {
         font-size: 72px;
       }
@@ -77,7 +77,7 @@ $light-green: #E5F2FC;
         background-color: $light-green;
         font-size: 30px;
         font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        color: white;
+        color: $light-pink;
         width: fit-content;
         margin: 0 auto;
         font-variant: small-caps;
