--- a/css/cong-and-margi.css
+++ b/css/cong-and-margi.css
@@ -141,7 +141,7 @@
 }
 .cong-and-margi #details .nestldown-img {
   margin-left: -15px;
-  width: 70vw;
+  width: 100vw;
   object-fit: cover;
 }
 .cong-and-margi #wedding-party .wedding-party-image {
@@ -199,7 +199,7 @@
     font-weight: 400;
     border-bottom: 6px solid #77a3e5;
   }
-  .cong-and-margi #details .nestldown-img {
+  .cong-and-margi #rspv .nestldown-img {
     width: 50vw;
     height: 100%;
   }
