--- a/css/cong-and-margi.scss
+++ b/css/cong-and-margi.scss
@@ -167,7 +167,7 @@ $light-green: #E5F2FC;
     }
     .nestldown-img {
       margin-left: -15px;
-      width: 100vw;
+      width: 50vw;
       object-fit: cover;
     }
   }
@@ -259,7 +259,7 @@ $light-green: #E5F2FC;
         }
       }
     }
-    #rspv {
+    #rsvp {
       .nestldown-img {
         width: 50vw;
         height: 100%;
