Experimenting with padding

--- a/css/cong-and-margi.scss
+++ b/css/cong-and-margi.scss
@@ -260,6 +260,7 @@ $light-green: #E5F2FC;
       }
     }
     #rsvp {
+      padding: 0;
       .nestldown-img {
         margin-left: 25px;
         margin-right: 25px;
