--- a/css/cong-and-margi.css
+++ b/css/cong-and-margi.css
@@ -199,6 +199,9 @@
     font-weight: 400;
     border-bottom: 6px solid #77a3e5;
   }
+  .cong-and-margi #rsvp {
+    padding: 0;
+  }
   .cong-and-margi #rsvp .nestldown-img {
     margin-left: 25px;
     margin-right: 25px;
