--- a/css/cong-and-margi.css
+++ b/css/cong-and-margi.css
@@ -163,7 +163,7 @@
   height: 150px;
 }
 .cong-and-margi #faq {
-  padding: 50;
+  padding: 50px;
 }
 .cong-and-margi #faq .q-and-a {
   margin: 20px 0;
