--- a/css/cong-and-margi.css
+++ b/css/cong-and-margi.css
@@ -45,6 +45,38 @@
   color: #77a3e5;
   font-weight: 400;
 }
+.cong-and-margi .footer .footer-text {
+  position: absolute;
+  width: 100vw;
+  text-align: center;
+  top: 86px;
+  color: #306BAC;
+}
+.cong-and-margi .footer .footer-text h1 {
+  font-size: 72px;
+}
+.cong-and-margi .footer .footer-subtext {
+  position: absolute;
+  text-align: center;
+  bottom: 60px;
+  width: 100vw;
+}
+.cong-and-margi .footer .footer-subtext h3 {
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #E5F2FC;
+  font-size: 30px;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #306BAC;
+  width: fit-content;
+  margin: 0 auto;
+  font-variant: small-caps;
+}
+.cong-and-margi .footer .footer-img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
 .cong-and-margi .header .header-text {
   position: absolute;
   width: 100vw;
@@ -178,6 +210,12 @@
     font-size: 44px;
   }
   .cong-and-margi .header .header-subtext h3 {
+    font-size: 18px;
+  }
+  .cong-and-margi .footer .footer-text h1 {
+    font-size: 44px;
+  }
+  .cong-and-margi .footer .footer-subtext h3 {
     font-size: 18px;
   }
   .cong-and-margi #details .content .schedule .time, .cong-and-margi #details .content .schedule .event {
