--- a/css/cong-and-margi.css
+++ b/css/cong-and-margi.css
@@ -45,20 +45,13 @@
   color: #77a3e5;
   font-weight: 400;
 }
-.cong-and-margi .footer .footer-text {
-  position: absolute;
-  width: 100vw;
-  text-align: center;
-  top: 86px;
-  color: #306BAC;
-}
-.cong-and-margi .footer .footer-text h1 {
-  font-size: 72px;
+.cong-and-margi .footer {
+  margin: -50px 0px 0px 0px;
 }
 .cong-and-margi .footer .footer-subtext {
-  position: absolute;
+  position: relative;
   text-align: center;
-  bottom: 60px;
+  bottom: -450px;
   width: 100vw;
 }
 .cong-and-margi .footer .footer-subtext h3 {
@@ -241,7 +234,7 @@
     border-bottom: 6px solid #77a3e5;
   }
   .cong-and-margi #rsvp {
-    padding: 0;
+    padding: 0px 0px 50px 0px;
   }
   .cong-and-margi #rsvp .nestldown-img {
     margin-left: 0px;
