--- a/css/cong-and-margi.scss
+++ b/css/cong-and-margi.scss
@@ -171,7 +171,7 @@ $light-green: #E5F2FC;
     }
   }
   #details {
-    padding: 0;
+    padding: 0 0 50px 0;
     > .row {
       margin: 0;
     }
