--- a/css/cong-and-margi.scss
+++ b/css/cong-and-margi.scss
@@ -42,6 +42,11 @@ $light-green: #E5F2FC;
     font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     text-align: center;
   }
+
+  .optional {
+	  margin-bottom: 0.3em;
+  }
+
   #mainNav {
     background-color: $lightest-pink;
     box-shadow: 0 0 15px #333;
